wip on inspectors

--- a/src/inspectors/src/AxOpen.Inspectors.Blazor/AxOpen.Inspectors.Blazor.csproj
+++ b/src/inspectors/src/AxOpen.Inspectors.Blazor/AxOpen.Inspectors.Blazor.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\core\src\AXOpen.Core.Blazor\axopen_core_blazor.csproj" />
-    <ProjectReference Include="..\AxOpen.Inspectors\AxOpen.Inspectors.csproj" />
+    <ProjectReference Include="..\AxOpen.Inspectors\ix_ax_axopen_inspectors.csproj" />
   </ItemGroup>
 
 </Project>
