--- a/src/templates.simple/axosimple.twin/axosimple.csproj
+++ b/src/templates.simple/axosimple.twin/axosimple.csproj
@@ -15,7 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\core\src\AXOpen.Core\ix_ax_axopen_core.csproj" />
     <ProjectReference Include="..\..\data\src\AXOpen.Data\ix_ax_axopen_data.csproj" />
-    <ProjectReference Include="..\..\inspectors\src\AxOpen.Inspectors\AxOpen.Inspectors.csproj" />
+    <ProjectReference Include="..\..\inspectors\src\AxOpen.Inspectors\ix_ax_axopen_inspectors.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Resources\PlcStringResources.Designer.cs">
