--- a/src/data/src/AXOpen.Data/ix_ax_axopen_data.csproj
+++ b/src/data/src/AXOpen.Data/ix_ax_axopen_data.csproj
@@ -14,6 +14,7 @@
 		</PackageReference>
 		<PackageReference Include="AXSharp.Abstractions" Version="0.14.1-alpha.120" />
 		<PackageReference Include="AXSharp.Connector" Version="0.14.1-alpha.120" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.10" />
 	</ItemGroup>
 
 	<ItemGroup>
