--- a/src/template.axolibrary/src/librarytemplate/ix_ax_axolib.csproj
+++ b/src/template.axolibrary/src/librarytemplate/ix_ax_axolib.csproj
@@ -3,8 +3,8 @@
 		<TargetFramework>net7.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-    <PackageId>librarytemplate</PackageId>
-    <RootNamespace>librarytemplate</RootNamespace>
+    <PackageId>dotnetlibs</PackageId>
+    <RootNamespace>dotnetlibs</RootNamespace>
   </PropertyGroup>
 
 	<ItemGroup>
