--- a/src/components.cognex.vision/ctrl/apax.yml
+++ b/src/components.cognex.vision/ctrl/apax.yml
@@ -17,3 +17,5 @@ dependencies:
   "@ix-ax/axopen.components.abstractions": '0.1.4-alpha.79'
   "@ix-ax/axopen.utils": '0.1.4-alpha.79'
   "@ax/system-timer": ^4.0.1
+  "@ax/system-strings": ^5.0.12
+  "@ax/system-serde": ^2.0.2
