--- a/src/template.axolibrary/src/dotnetlibs/ix_ax_axolib.csproj
+++ b/src/template.axolibrary/src/dotnetlibs/ix_ax_axolib.csproj
@@ -3,8 +3,32 @@
 		<TargetFramework>net7.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-    <PackageId>dotnetlibs</PackageId>
-    <RootNamespace>dotnetlibs</RootNamespace>
+    
+		<RootNamespace>dotnetlibs</RootNamespace>
+
+		<!--NuGet Specific part-->
+		<Description>This library is part of AXOpen framework</Description>
+		<PackageId>dotnetlibs</PackageId>
+		<Title>AXOpen - librarytemplate</Title>
+
+		<!-- NuGet Common part-->
+		<PackageProjectUrl>https://github.com/ix-ax/</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/ix-ax/AXOpen</RepositoryUrl>
+		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+		<Authors>ix-ax</Authors>
+		<Copyright>(c) Peter Kurhajec and Contributors</Copyright>
+		<PackageTags>simatix-ax, PLC, industrial automation, SCADA, HMI, AX#r</PackageTags>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<PackageIcon>icon_128_128.png</PackageIcon>
+		<RepositoryType>git</RepositoryType>
+		<IncludeSymbols>True</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageReleaseNotes>
+			Release notes are published here:
+			https://github.com/ix-ax/AXOpen/releases
+		</PackageReleaseNotes>
+		<PackageReadmeFile>NUGET-README.md</PackageReadmeFile>
   </PropertyGroup>
 
 	<ItemGroup>
