--- a/src/template.axolibrary/src/dotnetlibs/ix_ax_axolib.csproj
+++ b/src/template.axolibrary/src/dotnetlibs/ix_ax_axolib.csproj
@@ -68,6 +68,17 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Include="..\..\..\..\assets\icons\icon_128_128.png">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	  <None Include="..\..\..\NUGET-README.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	</ItemGroup>
+
+	<ItemGroup>
 	  <ProjectReference Include="..\..\..\core\src\AXOpen.Core\ix_ax_axopen_core.csproj" />
 	</ItemGroup>
 </Project>
