--- a/src/template.axolibrary/tests/dotnetlibs.Tests/dotnetlibs_tests.csproj
+++ b/src/template.axolibrary/tests/dotnetlibs.Tests/dotnetlibs_tests.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\librarytemplate\ix_ax_librarytemplate.csproj" />
+    <ProjectReference Include="..\..\src\dotnetlibs\ix_ax_axolib.csproj" />
   </ItemGroup>
 
 	<ItemGroup>
