--- a/src/components.pneumatics/ctrl/apax.yml
+++ b/src/components.pneumatics/ctrl/apax.yml
@@ -3,16 +3,20 @@ version: '0.1.4-alpha.79'
 type: lib
 targets:
   - axunit-llvm
+  - llvm
+  - plcsim
+  - "1500"
 files:
   - src
 variables:
   APAX_BUILD_ARGS:
-    - "--debug" 
-  AXUNIT_TARGET_IP : "192.168.0.4"
-  SIM_ENABLED : "true"
+    - "--debug"
+  AXUNIT_TARGET_IP: "172.20.30.110"
+  SIM_ENABLED: "true"
 devDependencies:
-  "@ax/sdk": ^4.0.3  
-dependencies: 
+  "@ax/sdk": ^4.0.3
+  "@ax/axunitst": ^2.0.10
+dependencies:
   "@ix-ax/axopen.components.abstractions": '0.1.4-alpha.79'
-  "@ix-ax/axopen.core" : 0.1.4-alpha.79  
-
+  "@ix-ax/axopen.core": 0.1.4-alpha.79
+  
