--- a/src/components.pneumatics/ctrl/apax.yml
+++ b/src/components.pneumatics/ctrl/apax.yml
@@ -3,9 +3,6 @@ version: '0.1.4-alpha.79'
 type: lib
 targets:
   - axunit-llvm
-  - llvm
-  - plcsim
-  - "1500"
 files:
   - src
 variables:
@@ -15,8 +12,11 @@ variables:
   SIM_ENABLED: "true"
 devDependencies:
   "@ax/sdk": ^4.0.3
-  "@ax/axunitst": ^2.0.10
 dependencies:
   "@ix-ax/axopen.components.abstractions": '0.1.4-alpha.79'
   "@ix-ax/axopen.core": 0.1.4-alpha.79
-  
+scripts:
+  download:
+    - START=$(date +%s)
+    - apax sld --accept-security-disclaimer -t $AXTARGET -i $AXTARGETPLATFORMINPUT -r --default-server-interface
+    - echo "Downloaded in :" $(expr $(date +%s) - $START) "s"
