wip bumbing to stc5.4

--- a/src/timers/ctrl/apax.yml
+++ b/src/timers/ctrl/apax.yml
@@ -3,10 +3,10 @@ version: '0.1.4-alpha.79'
 type: lib
 targets:
   - axunit-llvm
-  - llvm
 files:
   - src
 devDependencies:
   "@ax/sdk": 4.0.3
+  "@ax/stc": 5.4.89
 dependencies:
   "@ix-ax/axopen.abstractions": ^0.1.4-alpha.79
