--- a/src/core/ctrl/apax.yml
+++ b/src/core/ctrl/apax.yml
@@ -6,11 +6,10 @@ targets:
 files:
   - src
 devDependencies:
-  "@ax/sdk": ^4.0.3
+  "@ax/sdk": ^4.0.7
 scripts:
   postbuild:
     - dotnet ixc
 dependencies:
-  "@ax/system-timer": ^4.0.1
-  "@ix-ax/axopen.abstractions": '0.1.4-alpha.79'
-  "@ax/system-edgedetection": ^5.0.7
+  "@ix-ax/axopen.timers": '0.1.4-alpha.79'
+  "@ix-ax/axopen.abstractions": '0.1.4-alpha.79'  
