--- a/src/templates.simple/ctrl/apax.yml
+++ b/src/templates.simple/ctrl/apax.yml
@@ -4,8 +4,9 @@ type: app
 registries:
   '@ix-ax': https://npm.pkg.github.com/
 devDependencies:
-  "@ax/sdk": ^4.0.3
+  "@ax/sdk": ^4.0.7
   "@ax/sld": ^0.15.9
+  "@ax/stc": ^5.4.89
 dependencies:
   "@ix-ax/axopen.data": '0.1.4-alpha.79'
   "@ix-ax/axopen.inspectors": '0.1.4-alpha.79'
@@ -69,3 +70,4 @@ scripts:
     - apax rr
 targets:
   - axunit-llvm
+  - plcsim
