--- a/src/inspectors/app/ix-blazor/AXOpen.Inspectors.blazor/inspectors.blazor.csproj
+++ b/src/inspectors/app/ix-blazor/AXOpen.Inspectors.blazor/inspectors.blazor.csproj
@@ -12,8 +12,8 @@
     <ProjectReference Include="..\..\..\..\core\src\AXOpen.Core.Blazor\axopen_core_blazor.csproj" />
     <ProjectReference Include="..\..\..\..\data\src\repositories\Json\AXOpen.Data.Json.csproj" />
     <ProjectReference Include="..\..\..\..\security\src\AXOpen.Security.Blazor\AXOpen.Security.Blazor.csproj" />
-    <ProjectReference Include="..\..\..\src\dotnetlibs.blazor\dotnetlibs.blazor.csproj" />
-    <ProjectReference Include="..\..\ix\librarytemplate.csproj" />
+    <ProjectReference Include="..\..\..\src\AXOpen.Inspectors.blazor\AXOpen.Inspectors.blazor.csproj" />
+    <ProjectReference Include="..\..\ix\inspectors.csproj" />
   </ItemGroup>
 
 </Project>
