--- a/src/components.pneumatics/app/apax.yml
+++ b/src/components.pneumatics/app/apax.yml
@@ -5,6 +5,7 @@ devDependencies:
   "@ax/sdk": 4.0.3
 dependencies:
   "@ix-ax/axopen_components_pneumatics": 0.1.4-alpha.79
+  "@ix-ax/axopen.simatic1500": '0.1.4-alpha.79'
 variables:
   APAX_BUILD_ARGS:
     - "--debug" # Generate debug information for target "1500"
