--- a/src/integrations/src/AXOpen.Integrations/axopen_integrations.csproj
+++ b/src/integrations/src/AXOpen.Integrations/axopen_integrations.csproj
@@ -20,6 +20,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="AXOpen.Messaging - Copy\**" />
+    <EmbeddedResource Remove="AXOpen.Messaging - Copy\**" />
+    <None Remove="AXOpen.Messaging - Copy\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include=".g\Onliners\ix-core\" />
   </ItemGroup>
 
