--- a/src/components.cognex.vision/ctrl/apax.yml
+++ b/src/components.cognex.vision/ctrl/apax.yml
@@ -14,6 +14,7 @@ scripts:
     - dotnet ixc
 dependencies:
   "@ix-ax/axopen.components.abstractions": '0.1.4-alpha.79'
+  "@ix-ax/axopen.core": '0.1.4-alpha.79'
   "@ix-ax/axopen.utils": '0.1.4-alpha.79'
   "@ax/system-timer": ^4.0.1
   "@ax/system-strings": ^5.0.12
