--- a/src/components.cognex.vision/src/AXOpen.Cognex.Vision.Blazor/axopen_cognex_vision_blazor.csproj
+++ b/src/components.cognex.vision/src/AXOpen.Cognex.Vision.Blazor/axopen_cognex_vision_blazor.csproj
@@ -4,8 +4,32 @@
     <TargetFrameworks>net7.0</TargetFrameworks>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <PackageId>AXOpen.Cognex.Vision.Blazor</PackageId>
+
     <RootNamespace>AXOpen.Cognex.Vision.Blazor</RootNamespace>
+
+    <!--NuGet Specific part-->
+    <Description>This library is part of AXOpen framework</Description>
+    <PackageId>AXOpen.Cognex.Vision.Blazor</PackageId>
+    <Title>AXOpen - cognexvision</Title>
+    
+    <!-- NuGet Common part-->
+    <PackageProjectUrl>https://github.com/ix-ax/</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/ix-ax/AXOpen</RepositoryUrl>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <Authors>ix-ax</Authors>
+    <Copyright>(c) Peter Kurhajec and Contributors</Copyright>
+    <PackageTags>simatix-ax, PLC, industrial automation, SCADA, HMI, Blazor</PackageTags>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <PackageIcon>icon_128_128.png</PackageIcon>
+    <RepositoryType>git</RepositoryType>
+    <IncludeSymbols>True</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReleaseNotes>
+      Release notes are published here:
+      https://github.com/ix-ax/AXOpen/releases
+    </PackageReleaseNotes>
+    <PackageReadmeFile>NUGET-README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,7 +38,6 @@
 
   <ItemGroup>
 	  <FrameworkReference Include="Microsoft.AspNetCore.App" />
-	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
     <PackageReference Include="GitVersion.MsBuild" Version="5.10.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -23,9 +46,22 @@
     <PackageReference Include="AXSharp.Presentation.Blazor.Controls" Version="0.14.2-alpha.134" />
     <PackageReference Include="Humanizer" Version="2.14.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.8" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="..\..\..\..\assets\icons\icon_128_128.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\..\..\NUGET-README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\core\src\AXOpen.Core.Blazor\axopen_core_blazor.csproj" />
     <ProjectReference Include="..\AXOpen.Cognex.Vision\ix_ax_axopen_cognex_vision.csproj" />
   </ItemGroup>
 </Project>
