--- a/src/data/tests/AXOpen.Data.Exporters.ExcelTests/AXOpen.Data.Exporters.ExcelTests.csproj
+++ b/src/data/tests/AXOpen.Data.Exporters.ExcelTests/AXOpen.Data.Exporters.ExcelTests.csproj
@@ -34,7 +34,7 @@
 	</ItemGroup>
    <ItemGroup>
      <ProjectReference Include="..\..\..\data\src\repositories\InMemory\AXOpen.Data.InMemory.csproj" />
-     <ProjectReference Include="..\..\src\AXOpen.Data\ix_ax_axopen_exporters.csproj" />
+     <ProjectReference Include="..\..\src\exporters\AXOpen.Data.Exporters.Excel\AXOpen.Data.Exporters.Excel.csproj" />
   </ItemGroup>
   
 </Project>
