added inspector tests with axotimer, added security to inspector test app, update documentation, wip on sequencer in inspector test app

--- a/src/timers/ctrl/apax.yml
+++ b/src/timers/ctrl/apax.yml
@@ -7,6 +7,6 @@ files:
   - src
 devDependencies:
   "@ax/sdk": 4.0.8
-  "@ax/stc": 5.4.89
+  "@ax/stc": ^5.4.89
 dependencies:
   "@ix-ax/axopen.abstractions": ^0.1.4-alpha.79
