--- a/src/inspectors/ctrl/apax.yml
+++ b/src/inspectors/ctrl/apax.yml
@@ -7,11 +7,12 @@ files:
   - src
 devDependencies:
   "@ax/sdk": ^4.0.8
-  "@ax/stc": ^5.4.89
+  "@ax/stc": ^5.4.89  
 scripts:
   postbuild:
     - dotnet ixc
 dependencies:
   "@ix-ax/axopen.timers": '0.1.4-alpha.79'
   "@ix-ax/axopen.core": '0.1.4-alpha.79'
+  "@ax/sld": ^1.0.11
   #"@ix-ax/axopen.simatic1500": '0.1.4-alpha.79'
