--- a/src/components.pneumatics/app/apax.yml
+++ b/src/components.pneumatics/app/apax.yml
@@ -55,3 +55,6 @@ scripts:
     - echo $(date +%D)"-"$(date +%H)":"$(date +%M)":"$(date +%S) " - Finished in :" $(expr $(date +%s) - $START) "s"
 targets:
   - plcsim
+  - axunit-lvvm 
+  - lvvm 
+  - "1500" 
